--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,7 +1,6 @@
 .item {
-  min-height: 20em;
-  height: auto;
-  width: 20em;
+  height: 22em;
+  width: 22em;
   padding: 0.5em;
   border: 1px solid green;
 }
