quantities stored and able to remove item from ls

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,6 +1,7 @@
 .item {
-  height: 22em;
-  width: 22em;
-  padding: 0.5em;
+  height: 12em;
+  width: 12em;
   border: 1px solid green;
+  padding: 2em;
+  margin: 1em;
 }
