--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,17 +1,15 @@
 .carousel {
-  min-width: auto;
+  width: 50em;
   display: flex;
   justify-content: center;
   border: solid 1px green;
-  margin: 2em;
+  margin: auto;
   h2{
     text-transform: capitalize;
   }
 }
 
 .display {
-  // width: 10em;
-  // height: 12em;
   background-color: white;
   color: black;
   display: flex;
