--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,4 +1,5 @@
 .carousel {
+  height: 20em;
   width: 50em;
   display: flex;
   justify-content: center;
@@ -10,10 +11,12 @@
 }
 
 .display {
-  background-color: white;
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 1em;
+  border: solid 1px green;
+  height: 15em;
+  width: 15em;
 }
