--- a/src/index.css
+++ b/src/index.css
@@ -9,16 +9,6 @@
   padding: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
@@ -46,3 +36,7 @@ body {
   width: 100%;
   height: 100%;
 }
+  *, html, body {
+    margin: 0;
+    padding: 0;
+ }
