Most styling done

--- a/src/components/CardContainer/CardContainer.module.scss
+++ b/src/components/CardContainer/CardContainer.module.scss
@@ -5,3 +5,11 @@
   justify-content: center;
   gap: 2em;
 }
+
+.loading_error {
+  margin: 8em;
+  img {
+    width: 30em;
+    margin-bottom: 2em;
+  }
+}
