--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,3 +1,12 @@
-.btn {
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  transition: border-color 0.25s;
   margin: 0.5em;
+}
+
+button:hover {
+  border-color: #646cff;
 }
