--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,6 +7,10 @@
   padding-top: 0;
   border-radius: 10px;
   padding-bottom: 1em;
+  &:hover {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border: 1.5px solid green;
+  }
 }
 
 .item_details {
