--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,11 +1,12 @@
 .carousel {
   height: auto;
-  width: 60em;
+  width: 44em;
   display: inline-block;
   justify-content: center;
-  border: solid 3px green;
+  border: solid 20px green;
+  background: green;
   margin: 2em auto;
-  padding: 1em;
+  border-radius: 10px;
   h2{
     text-transform: capitalize;
     margin: 0;
@@ -17,6 +18,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-color: white;
 }
 
 .carousel_card {
@@ -32,5 +34,26 @@
   img {
     width: 6em;
     padding: 1em;
+  }
+
+}
+
+button {
+  margin: auto 1em;
+  height: 3em;
+}
+
+.title {
+  width: 100%;
+  // height: 3.5em;
+  align-content: center;
+  margin: 0;
+  margin-top: 0;
+  background: green;
+  color: white;
+  // border-radius: 9px 9px 0px 0px;
+  h2 {
+    font-size: 2em;
+    margin-bottom: 0.5em;
   }
 }
