--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -1,5 +1,21 @@
+.product {
+  margin: 4em auto;
+  margin-top: 0;
+  padding: 1em;
+  width: 40em;
+  h1, h2 {
+    margin: 1.25em;
+  }
+}
+
+.product_details {
+  font-size: 1.6em;
+  line-height: 2em;
+  margin: 1.5em;
+}
+
 .product_img {
-  transform: scale(2.5);
+  transform: scale(3);
   margin: 3em;
   height: 3em;
   width: 3em;
@@ -13,5 +29,17 @@
   Button {
     height: 3em;
     margin: 0.5em;
+  }
+}
+
+
+.back {
+  border: solid 1px green;
+  width: 8em;
+  margin: 0 6em;
+  a {
+    color: green;
+    font-size: 2em;
+    text-decoration: none;
   }
 }
