--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,6 +7,10 @@
   padding-top: 0;
   border-radius: 10px;
   padding-bottom: 1em;
+  a{
+    text-decoration: none;
+    color: black;
+  }
   &:hover {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border: 1.5px solid green;
@@ -14,7 +18,9 @@
 }
 
 .item_details {
-  height: 8em;
+  margin-top: 2em;
+  height: 5em;
+  font-size: 1em;
   * {
     margin: 0.5em;
     padding: 0.25em;
