--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -2,7 +2,7 @@
   margin: 4em auto;
   margin-top: 0;
   padding: 1em;
-  width: 40em;
+  width: 44em;
   h1, h2 {
     margin: 1.25em;
   }
@@ -36,10 +36,30 @@
 .back {
   border: solid 1px green;
   width: 8em;
-  margin: 0 6em;
+  margin: 4em 6em;
+  padding: 0.25em;
+  border-radius: 3px;
   a {
     color: green;
     font-size: 2em;
     text-decoration: none;
+  }
+  &:hover {
+    transition: 0.3s;
+    background-color: green;
+    a {
+      color: white
+    }
+  }
+}
+
+.success {
+    font-size: 1.5em;
+  a {
+    text-decoration: none;
+    font-weight: 500;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
