--- a/src/pages/CheckoutPage/CheckoutPage.module.scss
+++ b/src/pages/CheckoutPage/CheckoutPage.module.scss
@@ -7,6 +7,18 @@
 }
 
 h1 {
-  margin: 2em;
+  margin: 2em 1em 0 1em;
   font-size: 4em;
+}
+
+footer {
+  line-height: 6em;
+  button {
+    background-color: rgb(0, 162, 255);
+    color: white;
+    &:hover {
+      transition: 0.3s;
+      transform: scale(1.1);
+    }
+  }
 }
